create grid using flexbox. added function and prompt to choose size of grid. add condition to ask for value if higher than 100

--- a/index.html
+++ b/index.html
@@ -11,18 +11,29 @@
     <div id="container"></div>
     <script>
         const cont = document.querySelector("#container");
-        
 
-        for(let i=0; i<16; i++){
-            for(let i=0; i<16; i++){
+        function squares(){
+        let num = prompt("enter number of squares per side for new grid (up to 100)");
+        if(num>100){
+            alert("enter a number lower than 101");
+            squares();
+        }else{
+        let width = ((1000/num)-2)+"px";
+        let height = ((1000/num)-2) +"px";
+
+        for(let i=0; i<num; i++){
+            for(let i=0; i<num; i++){
             const div = document.createElement('div');
-            div.style.width = "45px";
-            div.style.height = "45px";
+            div.style.width = `${width}`;
+            div.style.height = `${height}`;
             div.style.border = "1px solid black";
             
             cont.appendChild(div);
             }
         }
+    }
+    }
+    squares();
     </script>
 </body>
 </html>
